[project]
name = "rawtxdecode-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "eth-account>=0.13.7",
    "eth-utils>=5.3.0",
    "hexbytes>=1.3.1",
    "py-evm>=0.12.1b1",
    "rlp>=4.1.0",
]

[project.scripts]
decode = "rawtxdecode_py.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

